Added timezone support in the viewer side. Updated data extraction plugin to support timezone option. Updated model utility class to support timezone.